Finished off the 10RTech APP

--- a/trakberry/templates/down_10r_fix.html
+++ b/trakberry/templates/down_10r_fix.html
@@ -34,18 +34,18 @@
              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
              <br><br>
              <button class="button6" type="button""><font size="4">
-             <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                Solution
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></font></button>&nbsp;&nbsp;&nbsp;<br><br>
-             <input style="font-size:14px;width:470px;height:120px;text-align: top;" name="solution" type="textarea" placeholder="Enter Solution Here"><br><br>
+             <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+                Solution or Pass off Information
+                
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </b></font></button>&nbsp;&nbsp;&nbsp;<br><br>
+             <input style="font-size:14px;width:470px;height:120px;text-align: top;" name="solution" type="textarea" placeholder="Enter Solution or Pass of information Here"><br><br>
+
+             <input style="text-align: left;width:180px;height:40px;font-size: 18px;border-style: solid;background-color:#88ff26;border-color:#a1a1a1;border-radius: 10px;" name = "enter" type="submit" value="              Enter                 ">
              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-             <input style="text-align: left;width:150px;height:40px;font-size: 18px;border-style: solid;border-color:#A1A1A1;border-radius: 10px;" type="submit" value="         Enter  ">
+             <input style="text-align: left;width:100px;height:40px;font-size: 18px;border-style: solid;background-color:#55b2ff;border-color:#A1A1A1;border-radius: 10px;" name = "enter" type="submit" value=" Pass Off ">
         </div>
     </div>
 </center>
