--- a/trakberry/templates/kiosk/down_10r.html
+++ b/trakberry/templates/kiosk/down_10r.html
@@ -61,7 +61,7 @@
 	</div>
 </div>
 
-<div class="mainset3">
+<div class="mainset3"><br><br>
     <button class="button3" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_menu';"><font size="2">
         <b>&nbsp;&nbsp;&nbsp;&nbsp;Cancel&nbsp;&nbsp;</b></font></button>&nbsp;&nbsp;&nbsp;
 
