--- a/trakberry/templates/kiosk/down_10r_style_mobile.html
+++ b/trakberry/templates/kiosk/down_10r_style_mobile.html
@@ -7,13 +7,13 @@
 	<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
 	<!-- ***********************************************************************************-->
 <style>
-	.frame1 {color:black;text-align:left;float:left;width:150%}
+	.frame1 {color:black;text-align:left;float:left;width:170%}
 	.frame3 {color:black;text-align:center;float:left;width:33%}
 	.frame2 {color:black;text-align:center;float:left;width:100%}
     .wrapper_main {width:100%;text-align:center;margin-left: 0px;}
 
 	.mainset2{color:black;text-align:left;float:left;width:55%}
-    .mainset4{color:black;text-align:left;float:left;width:45%}
+    .mainset4{color:black;text-align:left;float:left;width:40%}
     .mainset3{color:black;text-align:left;float:left;width:9%}
 
 
@@ -130,6 +130,7 @@
  
   		height: 45px;
   		text-align: center;
+        padding:13px;
   		cursor: pointer;
   		outline: none;
   		color: #000000;
@@ -148,6 +149,7 @@
  
   		height: 45px;
   		text-align: center;
+        padding:13px;
   		cursor: pointer;
   		outline: none;
   		color: #000000;
@@ -166,6 +168,7 @@
  
   		height: 45px;
   		text-align: center;
+        padding:13px;
   		cursor: pointer;
   		outline: none;
   		color: #000000;
@@ -184,7 +187,8 @@
 
 	.tech_10r_scale_ipad {Transform:scale(1.0);}
 	.tech_10r_scale {Transform:scale(1.0);}
-	
+    
+	.scale_a {Transform:scale(.5);}
 
 
 </style>
