--- a/trakberry/templates/master2.html
+++ b/trakberry/templates/master2.html
@@ -143,6 +143,10 @@
 											</ul>
 										</li>
 										<li><a href="{{request.session.local_toggle}}/mgmt_priorities">Priorities</a></li>
+										<li><a href="{{request.session.local_toggle}}/down_10r">10R Down App</a></li>  
+										<li><a href="{{request.session.local_toggle}}/tech_down_10r_mobileset">10R Tech App MOBILE  <b><mark>(** New ! **)</mark></b></a></li>  
+										<li><a href="{{request.session.local_toggle}}/tech_down_10r_displayset">10R Tech App  <b><mark>(** New ! **)</mark></b></a></li>  
+
 										<li><a href="{{request.session.local_toggle}}/tracking_10R80">Track 10R80</a></li>
 										<li><a href="{{request.session.local_toggle}}/tracking">TRACK</a></li>
 										<li><a href="{{request.session.local_toggle}}/training_matrix3">Matrix</a></li>
@@ -169,8 +173,7 @@
 										<li><a href="{{request.session.local_toggle}}/tech_pm_add">Tech PM Add</a></li> 
 										<li><a href="{{request.session.local_toggle}}/manpower_calculation">Manpower_calcuation</a></li> 
 										<li><a href="{{request.session.local_toggle}}/track_9341_history_date">9341 History</a></li>  
-										<li><a href="{{request.session.local_toggle}}/down_10r">10R Down App</a></li>  
-										<li><a href="{{request.session.local_toggle}}/tech_down_10r">10R Tech App</a></li>  
+										
 									</ul>  
 								</li>
 
