put 1802 back on 10R60

--- a/trakberry/templates/cell_track_9341_v2.html
+++ b/trakberry/templates/cell_track_9341_v2.html
@@ -803,10 +803,7 @@
                     <div class="asset borders" style="background-color:{{acolor1.1802}}">
 {% if down1.1802 %}
     <div class="asset-number">
-        <a href="/track_graph_track/get/1802/"
-            onclick="window.open('/track_graph_track/get/1802/', 'newwindow', 'width=1400, height=600'); return false;">
-            <font style="border:1px solid; border-color: rgb(255, 255, 255);border-radius: 30px;background-color: #971B00;box-shadow:4px 4px 8px #C84529;color:rgb(204, 204, 204);"> 
-                &nbsp;&nbsp;1802&nbsp;&nbsp;</font></a>
+
     </div>
 {% else %}
     <div class="asset-number">
@@ -815,10 +812,9 @@
             1802</a>
     </div>
 {% endif %}
-    <div class="asset-count">({{counts.1802}})</div>
+    <div class="asset-count"></div>
 </div>
                 </div>  
-
 
                 <div class="op">  <!-- OP 30  -->
                     <div class="asset borders" style="background-color:{{acolor1.1546}}">
@@ -1006,9 +1002,9 @@
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1816/"
             onclick="window.open('/dashboard/track_graph_track/get/1554/', 'newwindow', 'width=1400, height=600'); return false;">
-            1816</a>
+            </a>
     </div>
-    <div class="asset-count">({{counts.1816}})</div>
+    <div class="asset-count"></div>
 </div>
 
                 </div>
@@ -1036,22 +1032,22 @@
     <div class="asset-count">({{ccounts.1800}})</div>
 </div>
 
-                    <div class="asset borders" style="background-color:#D5D5D5">
+                    <div class="asset borders" style="background-color:{{aacolor1.1801}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1801/"
             onclick="window.open('/dashboard/track_graph_track/get/1801/', 'newwindow', 'width=1400, height=600'); return false;">
             1801</a>
     </div>
-    <div class="asset-count">(0)</div>
+    <div class="asset-count">({{ccounts.1801}})</div>
 </div>
 
-                    <div class="asset borders" style="background-color:#D5D5D5">
+                    <div class="asset borders" style="background-color:{{aacolor1.1802}}">
     <div class="asset-number">
         <a href="/dashboard/track_graph_track/get/1802/"
             onclick="window.open('/dashboard/track_graph_track/get/1802/', 'newwindow', 'width=1400, height=600'); return false;">
             1802</a>
     </div>
-    <div class="asset-count">(0)</div>
+    <div class="asset-count">({{ccounts.1802}})</div>
 </div>
 
                 </div>
