rolling out tech app

--- a/trakberry/templates/tech.html
+++ b/trakberry/templates/tech.html
@@ -159,8 +159,9 @@
                 
 				
 				<li><a href="{{request.session.local_toggle}}/tech_recent"><span class="glyphicon glyphicon-folder-open"></span> Recent History</a></li>
-				<li><a href="{{request.session.local_toggle}}/tech_map"><span class="glyphicon glyphicon-sunglasses"></span> Map</a></li>
+				
 				<li><a href="{{request.session.local_toggle}}/tech_message"><span class="glyphicon glyphicon-sunglasses"></span> Messaging</a></li>
+				<li><a href="{{request.session.local_toggle}}/tech_down_10r_mobileset"><span class="glyphicon glyphicon-sunglasses"></span> <b><mark>10R APP  (** New ! **)</mark></b></a></li>
 
 			</ul>	
 			
