--- a/trakberry/templates/kiosk/kiosk_menu.html
+++ b/trakberry/templates/kiosk/kiosk_menu.html
@@ -38,7 +38,9 @@
 
 
 	<div class="frame1"><br><br><br><br><br><br><br>
-		<button class="button" type="button"><font size="6"><b></b></font></button>
+		<button class="button" type="button">
+			<font size="6"><b>AB1V Need Tech</b></font><br><font size="5" style="color:rgb(132, 133, 73);"><b>** Coming Soon **</b></font>
+		</button>
 	</div>
 
 </center>
