--- a/trakberry/templates/tech.html
+++ b/trakberry/templates/tech.html
@@ -149,7 +149,7 @@
 			
             <ul class="nav navbar-nav">
 			
-				<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+
                 <li><a href="{{request.session.local_toggle}}/tech"><span class="glyphicon glyphicon-home"></span> Main</a></li>
 				
         <li><a href="{{request.session.local_toggle}}/t1_call"><span class="glyphicon glyphicon-fire"></span>Add Call</a></li>
@@ -158,7 +158,7 @@
 				
                 
 				
-				<li><a href="{{request.session.local_toggle}}/tech_recent"><span class="glyphicon glyphicon-folder-open"></span> Recent History</a></li>
+				<!-- <li><a href="{{request.session.local_toggle}}/tech_recent"><span class="glyphicon glyphicon-folder-open"></span> Recent History</a></li> -->
 				
 				<li><a href="{{request.session.local_toggle}}/tech_message"><span class="glyphicon glyphicon-sunglasses"></span> Messaging</a></li>
 				<li><a href="{{request.session.local_toggle}}/tech_down_10r_mobileset"><span class="glyphicon glyphicon-sunglasses"></span> <b><mark>10R APP  (** New ! **)</mark></b></a></li>
