--- a/trakberry/templates/redirect_sup_pie_chart.html
+++ b/trakberry/templates/redirect_sup_pie_chart.html
@@ -1,4 +1,4 @@
 
-<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/sup_pie_chart" />
+<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/tech_down_10r" />
 
 
