--- a/trakberry/templates/tech_down_10r.html
+++ b/trakberry/templates/tech_down_10r.html
@@ -1,7 +1,17 @@
 {% extends "kiosk/down_10r_style.html" %}
 {% block main %}
 
+<title>10R Tech APP</title>
+
+    {{request.session.tech_down_10r_login}}
+
 <meta http-equiv="refresh" content="8; url={{request.session.local_toggle}}/tech_down_10r"/>
+
+{% if request.session.tech_down_10r_login != 1 %} 
+    <meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/tech_10r_login"/>
+
+{% endif %} 
+
 
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <img alt="full screen background image" src="/static/media/kiosk.jpeg?{{request.session.TCUR}}" id="full-screen-background-image"/>
@@ -14,7 +24,25 @@
         <div class="wrapper_main"><center>
             <font style="font-size: 70px; color:rgb(187, 255, 190); text-shadow: 15px 15px 15px rgb(177, 177, 177), 0 0 25px rgb(160, 244, 247), 0 0 5px rgb(75, 184, 11);">
             </center>
-            10R CNC Tech APP</font><br>
+            10R CNC Tech APP</font>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <font style="font-size: 20px; color:rgb(187, 255, 190); text-shadow: 15px 15px 15px rgb(177, 177, 177), 0 0 25px rgb(160, 244, 247), 0 0 5px rgb(75, 184, 11);">
+            </center>
+            {{request.session.login_tech10r}}</font>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <font style="font-size: 16px; color:rgb(187, 255, 190); text-shadow: 15px 15px 15px rgb(177, 177, 177), 0 0 25px rgb(160, 244, 247), 0 0 5px rgb(75, 184, 11);">
+            </center>
+
+            <a href="{{request.session.local_toggle}}/tech_10r_logout/"
+            onclick="window.open('{{request.session.local_toggle}}/tech_10r_logout/'); return false;">
+            <font style="border:1px solid; border-color: rgb(255, 255, 255);border-radius: 30px;background-color: #7bcf70;box-shadow:4px 4px 8px #C84529;color:rgb(0, 0, 0);"> 
+                &nbsp;&nbsp;Logout&nbsp;&nbsp;</font></a>
+
+
+            
+        
+        </font>
+            <br>
             <div class="mainset2">  
                 <font style="font-size: 30px; color:white; text-shadow: 5px 5px 5px rgb(177, 177, 177), 0 0 25px rgb(160, 244, 247), 0 0 5px rgb(75, 184, 11);">10R80</font><br>
                 <div class="frame1">
@@ -24,6 +52,9 @@
                         {% if i.2 == 1 %} 
                             </div>
                             <br><br><br>
+
+
+
 	                        <div class="frame1">
                                 <button class="button2" type="button"><font size="2">
                                 {% if i.0 > 99 %}
@@ -38,8 +69,11 @@
                         {% elif i.3 == 'R' %}
                             <button class="button_r" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r_fix/get/{{i.4}}';"><font size="2">
                             <b>&nbsp;&nbsp;&nbsp;&nbsp;{{i.1}}&nbsp;&nbsp;&nbsp;&nbsp;</b></font></button>
-                        {% else %}
+                        {% elif i.3 == 'Y' %}
                             <button class="button_y" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r_fix/get/{{i.4}}';"><font size="2">
+                            <b>&nbsp;&nbsp;&nbsp;&nbsp;{{i.1}}&nbsp;&nbsp;&nbsp;&nbsp;</b></font></button>
+                        {% else %}
+                            <button class="button_gr" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r_fix/get/{{i.4}}';"><font size="2">
                             <b>&nbsp;&nbsp;&nbsp;&nbsp;{{i.1}}&nbsp;&nbsp;&nbsp;&nbsp;</b></font></button>
                         {% endif %}
                     {% endfor %}
@@ -68,8 +102,11 @@
                         {% elif i.3 == 'R' %}
                             <button class="button_r" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r_fix/get/{{i.4}}';"><font size="2">
                             <b>&nbsp;&nbsp;&nbsp;&nbsp;{{i.1}}&nbsp;&nbsp;&nbsp;&nbsp;</b></font></button>
-                        {% else %}
+                            {% elif i.3 == 'Y' %}
                             <button class="button_y" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r_fix/get/{{i.4}}';"><font size="2">
+                            <b>&nbsp;&nbsp;&nbsp;&nbsp;{{i.1}}&nbsp;&nbsp;&nbsp;&nbsp;</b></font></button>
+                        {% else %}
+                            <button class="button_gr" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/down_10r_fix/get/{{i.4}}';"><font size="2">
                             <b>&nbsp;&nbsp;&nbsp;&nbsp;{{i.1}}&nbsp;&nbsp;&nbsp;&nbsp;</b></font></button>
                         {% endif %}
                     {% endfor %}
